Fix Mozzarella Fox line-height misalignment

--- a/frontend/src/main.scss
+++ b/frontend/src/main.scss
@@ -116,9 +116,13 @@ hr {
 
 // Prevent resize animation of input
 .form-control {
-    background-size: 100% 100%, 100% 100%
+    background-size: 100% 100%, 100% 100%;
 }
 // Change input bottom bar to be rust colored
 .form-control, .is-focused .form-control {
     background-image: linear-gradient(to top, $rust 2px, rgba(0, 150, 136, 0) 2px), linear-gradient(to top, rgba(0, 0, 0, 0.26) 1px, rgba(0, 0, 0, 0) 1px);
+}
+// Make sure Mozzarella Fox input text aligns
+.form-control::placeholder {
+    line-height: 2;
 }
